--- a/examples/multiple-apis/index.html
+++ b/examples/multiple-apis/index.html
@@ -44,6 +44,10 @@
       // list of APIS
       var apis = [
         {
+          name: 'uic',
+          url: 'https://scf.baobeihuijia.com/test/uic/swagger/doc.json',
+        },
+        {
           name: 'PetStore',
           url: 'https://rebilly.github.io/ReDoc/swagger.yaml'
         },
